Fix TOC overflow issue in documentation
Allow screens that aren't tall enough to fit the full TOC to scroll within the element

--- a/sphinx/source/_static/custom.css
+++ b/sphinx/source/_static/custom.css
@@ -1,1 +1,6 @@
-.sphinxsidebarwrapper { position: fixed; width: 15em; }
+.sphinxsidebarwrapper {
+    position: fixed;
+    width: 16em;
+    height: 100%;
+    overflow-y: scroll;
+}
